--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "ghmd"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
 anyhow = "1.0.42"
 async-stream = "0.3.2"
+clap = { version = "3.0.14", features = ["derive"] }
 fn-error-context = "0.2.0"
 hyper = { version=  "0.14.10", features = ["server", "stream"] }
 log = "0.4.14"
@@ -16,8 +16,7 @@ pretty_env_logger = "0.4.0"
 reqwest = { version = "0.11.4", features = ["json"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
-sha2 = "0.9.5"
-structopt = "0.3.22"
+sha2 = "0.10.1"
 tera = "1.12.1"
 scraper = "0.12.0"
 tokio = { version = "1.8.1", features = ["sync", "net", "macros", "rt-multi-thread", "signal", "fs", "io-util"] }
